Add groups to csv -writer
add models for student

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /project/project/credentials.py
 /venv
+/project/*.csv
 
 # Created by https://www.gitignore.io/api/python,django,pycharm,virtualenv
 # Edit at https://www.gitignore.io/?templates=python,django,pycharm,virtualenv
