--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 certifi==2018.10.15
 chardet==3.0.4
-Django==2.1.2
 idna==2.7
 nose==1.3.7
 numpy==1.15.3
@@ -10,3 +9,4 @@ requests==2.20.0
 urllib3==1.24.1
 virtualenv==16.0.0
 django-bootstrap3
+git+https://github.com/Aalto-LeTech/django-lti-login.git@master#egg=django-lti-login
